css/styles.css
/* ... */
.flex-end{
-webkit-box-align:end;
-webkit-align-items:flex-end;
    -ms-flex-align:end;
        align-items:flex-end;
}
.flex-center{
  -webkit-box-align:center;
  -webkit-align-items:center;
      -ms-flex-align:center;
          align-items:center;
}
.flex-start{
-webkit-box-align:start;
-webkit-align-items:flex-start;
    -ms-flex-align:start;
        align-items:flex-start;
}
.space-around{
-webkit-justify-content:space-around;
    -ms-flex-pack:distribute;
        justify-content:space-around;
}
.text-center{
text-align:center;
margin-top:15px;
}
.vertical-align{
position:relative;
top:50%;
/*transform*/
-webkit-transform:translateY(-50%);
        transform:translateY(-50%);
}
h3{
text-transform:uppercase;
font-weight:100;
color:rgba(256,256,256,1);
font-size:48px;
font-size:3rem;
line-height:48px;
line-height:3rem;
}
p{
padding:10px 0;
color:rgba(256,256,256,1);
font-weight:200;
}
a{
color:rgba(255,255,255,1);
text-decoration:none;
text-transform:uppercase;
font-weight:700;
letter-spacing:3px;
}
.red{
background-color:rgba(180,54,58,1);
}
.show-little{
display:none;
}
.show-big{
width:125% !important;
}
/*--------------------------------header---------------------------------*/

.home{
margin:0 50px;
}
.home-header{
border-bottom:2px solid #fff;
padding:20px 0;
}
.home-header li{
list-style:none;
padding:0 50px;
color:#fff;
z-index: 200;
}
.home-header a[href="index.html"]:hover{
/*transform*/
-webkit-transform:translateY(5px);
        transform:translateY(5px);
opacity:0.8;
filter:alpha(opacity=80);
}
.not-home{
background-color:rgba(46,21,16,1);
border-bottom:4px solid rgba(0,0,0,1);
padding:0 50px;
}
.not-home .home-header{
border-bottom:none;
}
header a{
color:rgba(255,255,255,1);
text-decoration:none;
text-transform:uppercase;
font-weight:700;
letter-spacing:3px;
}
header a:hover{
color:rgba(177,214,107,1);
}

    .home-header nav {
      z-index: 200;
    }

    a.mobile_nav {
        display: none;
    }

    .mobile_nav {
      width: 40px;
      height: 40px;
    }


/*--------------------------------footer---------------------------------*/
footer nav li{
list-style:none;
color:#fff;
display:block;
}
footer>div{
width:85%;
margin:0 auto;
}
footer{
background-color:rgba(46,21,16,1);
border-top:4px solid rgba(0,0,0,1);
padding:50px 25px 25px;
color:#fff;
}
footer h3{
font-size:32px;
font-size:2rem;
padding-bottom:15px;
margin-bottom:15px;
border-bottom:1px solid rgba(177,214,107,1);
display:inline-block;
line-height:32px;
line-height:2rem;
}
footer a{
color:rgba(255,255,255,1);
text-decoration:none;
text-transform:uppercase;
font-weight:700;
letter-spacing:3px;
}
a:hover{
color:rgba(177,214,107,1);
}
footer .social{
width:160px;
}
footer .social img:hover{
opacity:0.5;
filter:alpha(opacity=50);
}
/*--------------------------------home---------------------------------*/
canvas{
  position: fixed;
  top: 0;
  left:50%;
  z-index: 1;
  opacity: .5;
}
.home-banner{
background: url(../img/header-banner.png) no-repeat center center fixed;
/*background-size*/
/*background-size*/
background-size:cover;
/*@@prefixmycss->No equivalent*/
height:650px;
}
.home-banner h3{
font-size:64px;
font-size:4rem;
line-height:67px;
line-height:4.2rem;
}
.home-banner h4{
font-weight:700;
font-size:40px;
font-size:2.5rem;
line-height:43px;
line-height:2.7rem;
text-transform:uppercase;
color:rgba(255,255,255,1);
}
.banner-text{
margin-left:50px;
/*transform*/
-webkit-transform:translateY(-70%);
        transform:translateY(-70%);
}
.home-content{
padding:50px;
min-height:300px;
background-color:rgba(85,166,142,1);
z-index: 9999;
}
.bold{
  font-weight: 700;
}
.home-content-inner{
  width:80%;
  margin:0 auto 25px;
}
.home-content-inner img{
  width:100px;
  margin-bottom:25px;
}
.home-content-inner>div{
  width:30%;
  margin-left: 3%;
  padding-right: 4.5%;
  text-align: center;
  border-right: 2px solid #fff;
}
.home-content-inner div:last-child{
  border-right: none;
  padding-right:5%;
}
.home-content-inner h4{
  font-weight: bold;
  font-size: 1.15em;
  line-height: 1.15em;
  text-transform: uppercase;
  letter-spacing: 4px;
  color:#fff;
}
.home-content-inner p{
  color:#000;
  margin: 15px 0 30px;
  font-weight: 400;
}
.home-content-inner a{
  border: 3px solid #fff;
  padding: 10px 20px;
}
.home-content-inner a:hover{
  border: 3px solid rgba(177,214,107,1);
}
.store-hours h3{
color:rgba(46,21,16,1);
}
.store-hours div{
margin:40px 25px;
font-size:28px;
font-size:1.8rem;
line-height:32px;
line-height:2rem;
}
.store-hours div h4{
margin-bottom:15px;

}
/*--------------------------------Location---------------------------------*/
.location_mapSection{
width:100%;
background:rgba(185,88,95,1);
}
.location_mapSection hr{
width:90%;
position:relative;
top:95px;
z-index:1;
}
.location_contentContainer section{
display:-webkit-box;
display:-ms-flexbox;
display:-webkit-flex;
display:flex;
-webkit-flex-flow:row wrap;
-webkit-box-pack:justify;
-webkit-justify-content:space-between;
    -ms-flex-pack:justify;
        justify-content:space-between;
padding:0 0 50px 0;
}
.location_call{
position:relative;
background:url("../img/location-contact-bg-full.png") no-repeat center center fixed;
/*background-size*/
/*background-size*/
background-size:cover;
/*@@prefixmycss->No equivalent*/
height:500px;
text-align:center;
}
.location_call>div{
background-color:rgba(0,0,0,0.5);
height:100%;
width:100%;
}
.location_contact{
float:right;
}
.location_contact div{
border:3px solid rgba(255,255,255,1);
padding:20px 0;
font-size:32px;
font-size:2rem;
margin-top:35px;
}
.location_story{
background:rgba(85,166,142,1);
padding-bottom:50px;
}
.location_story h3{
padding-bottom:15px;
color:rgba(46,21,16,1);
}
.location_story p{
color:rgba(46,21,16,1);
}
.location_story img{
display:block;
margin:0 auto;
border:4px solid rgba(255,255,255,1);
margin-bottom:50px;
}
.location_map{
border:4px solid rgba(255,255,255,1);
border-bottom:none;
background-color:rgba(255,255,255,1);
}
/* ... */

